2018-10-04: 2.0.0 (064b2c2)
- Initial version

2018-11-19: 2.0.1 (a745ce1)
- Make clear-display obey the automatic-draw config

TBD: 2.0.2 (TBD)
- Fix backlight PWM (value of zero is now completely off)
- Use CIE 1931 lookup-table for backlight intensity correction
- Add API for simple GUI elements with touch support