@@ -33,7 +33,7 @@
 #define GUI_SLIDER_KNOB_LENGTH 8
 
 #define GUI_TAB_NUM_MAX 10
-#define GUI_TAB_TEXT_LENGTH_MAX 8
+#define GUI_TAB_TEXT_LENGTH_MAX 5
 
 #define GUI_TAB_POS_Y  54
 #define GUI_TAB0_POS_X 2
