@@ -7,4 +7,6 @@
 TBD: 2.0.2 (TBD)
 - Fix backlight PWM (value of zero is now completely off)
 - Use CIE 1931 lookup-table for backlight intensity correction
+- Fix Status/Touch LED mixup
+- Add Set/GetTouchLEDConfig API
 - Add API for simple GUI elements with touch support
